@startuml
'https://plantuml.com/class-diagram

abstract class UserInterface
abstract class Database

Database <|-- LocalDatabase : <<implements>>
Database <|-- SqliteDatabase : <<implements>>
UserInterface <|-- SwingUserInterface : <<implements>>

class App

App --> Database
App <--> UserInterface

note top of Database : Data Layer Abstraction
note top of UserInterface : UI Layer Abstraction
note top of App : Logic Layer (Not interchangeable)

@enduml